# habit-reminder-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  apps.py  models.py  notifications.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_action_alter_habit_duration_and_more.py  0003_habit_last_reminder.py
habits/tests/: test_logic_and_permissions.py  test_serializers.py  test_services.py  test_tasks.py
nginx/: default.conf
telegram_bot/: Dockerfile  api.py  main.py  run_bot.py
users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py  0003_telegramlink.py
users/tests/: test_serializers.py  test_services.py
