[tool.poetry]
name = "habit-reminder-api"
version = "0.1.0"
description = ""
authors = ["Viktor Shadrin <v.viktor.shadrin@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
django = "5.2"
psycopg2-binary = "^2.9.11"
djangorestframework = "^3.16.1"
python-dotenv = "^1.0.1"
pillow = "^12.1.0"
djangorestframework-simplejwt = "^5.5.1"
djangorestframework-stubs = "^3.16.7"
django-filter = "^25.2"
drf-yasg = "^1.21.14"
django-cors-headers = "^4.9.0"
celery = "^5.6.2"
redis = "^7.1.0"
aiogram = "^3.24.0"
httpx = "^0.28.1"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
coverage = "^7.13.1"
gunicorn = "^25.0.3"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
